# kubeflow-llm-trainer-prototype

./: README.md  pyproject.toml
examples/: 01_trl_sft.py  02_cross_backend_switching.py  03_custom_backend.py  04_migration_from_builtin.py
manifests/base/runtimes/: trl_distributed.yaml  unsloth_single_device.yaml
src/kubeflow_llm_trainer/: __init__.py  _compat.py  integration.py  interface.py  progress.py  registry.py  trainer.py
src/kubeflow_llm_trainer/backends/: __init__.py  torchtune.py  trl.py  unsloth.py
src/kubeflow_llm_trainer/entrypoints/: __init__.py  trl_runner.py  unsloth_runner.py
tests/: conftest.py  test_backends.py  test_backward_compat.py  test_progress.py  test_registry.py  test_trainer.py
